--- a/1-RootWidget/template/pubspec.yaml
+++ b/1-RootWidget/template/pubspec.yaml
@@ -37,6 +37,12 @@ dependencies:
   logging: ^1.0.1
   provider: ^6.0.0
   equatable: ^2.0.3
+  flutter_svg: ^0.22.0
+  smooth_page_indicator: ^1.0.0+2
+  google_fonts: ^2.1.0
+  flutter_colorpicker: ^0.6.0
+  intl: ^0.17.0
+  uuid: ^3.0.4
 
 dev_dependencies:
   flutter_test:
@@ -56,9 +62,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - template_assets/
+    - images/
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
