--- a/1-RootWidget/template/pubspec.yaml
+++ b/1-RootWidget/template/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   flutter_colorpicker: ^0.6.0
   intl: ^0.17.0
   uuid: ^3.0.4
+  cached_network_image: ^3.1.0
+  flutter_slidable: ^0.6.0
+  
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +68,7 @@ flutter:
   assets:
     - assets/template_assets/
     - assets/images/
+    - assets/profile_pics/
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
