--- a/1-RootWidget/template/pubspec.yaml
+++ b/1-RootWidget/template/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   uuid: ^3.0.4
   cached_network_image: ^3.1.0
   flutter_slidable: ^0.6.0
-  
+
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +69,7 @@ flutter:
     - assets/template_assets/
     - assets/images/
     - assets/profile_pics/
+    - assets/mock_data/
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
