Init Profile Screen

--- a/1-RootWidget/template/assets/mock_data/projects.json
+++ b/1-RootWidget/template/assets/mock_data/projects.json
@@ -23,6 +23,22 @@
             "company_name": "Volkswagen",
             "description": "Add fast charging stations to every Petrol Station in the Country by 2030",
             "short_description": "Fast Charging at all petrol stations"
+        },
+        {
+            "uid": "1041-aefw-eqr4-f74s",
+            "project_name": "10,000 new Delivery Hubs",
+            "image_url": "https://th.bing.com/th/id/OIP.D9fLXBRbRjJtc2cgORlbKAHaE7?w=251&h=180&c=7&r=0&o=5&pid=1.7",
+            "company_name": "DPD",
+            "description": "Add 10,000 new Delivery locations for more efficient delivery of consumer items.",
+            "short_description": "Add 10,000 new Delivery locations"
+        },
+        {
+            "uid": "1685-aefw-eqr4-f74s",
+            "project_name": "Ban all Single-use grocery bags",
+            "image_url": "https://th.bing.com/th/id/OIP.PX1oL3_uMqHR9G50XFM8CgHaEN?w=285&h=180&c=7&r=0&o=5&pid=1.7",
+            "company_name": "Liberal Democrat Party",
+            "description": "Ban the purchase / use of single-use grocery bags in all stores by 2023.",
+            "short_description": "Ban the purchase / use of single-use grocery bags in all stores by 2023."
         }
     ]
 }
