--- a/1-RootWidget/template/pubspec.yaml
+++ b/1-RootWidget/template/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   uuid: ^3.0.4
   cached_network_image: ^3.1.0
   flutter_slidable: ^0.6.0
+  transparent_image: ^2.0.0
+  firebase_core: ^1.6.0
+  cloud_firestore: ^3.1.0
+  firebase_auth: ^3.1.1
 
 
 dev_dependencies:
