--- a/1-RootWidget/template/pubspec.yaml
+++ b/1-RootWidget/template/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   firebase_core: ^1.6.0
   cloud_firestore: ^3.1.0
   firebase_auth: ^3.1.1
+  firebase_storage: 
+  image_picker: ^0.8.4+4
 
 
 dev_dependencies:
