--- a/1-RootWidget/template/pubspec.yaml
+++ b/1-RootWidget/template/pubspec.yaml
@@ -46,10 +46,10 @@ dependencies:
   cached_network_image: ^3.1.0
   flutter_slidable: ^0.6.0
   transparent_image: ^2.0.0
-  firebase_core: ^1.6.0
+  firebase_core: ^1.10.0
   cloud_firestore: ^3.1.0
   firebase_auth: ^3.1.1
-  firebase_storage: 
+  firebase_storage: ^10.1.0
   image_picker: ^0.8.4+4
 
 
@@ -60,6 +60,7 @@ dev_dependencies:
   build_runner: ^2.1.1
   json_serializable: ^4.1.4
   chopper_generator: ^4.0.1
+  # fake_cloud_firestore: ^1.1.3
   
   flutter_lints: ^1.0.0
 
