--- a/1-RootWidget/template/ios/Runner/Info.plist
+++ b/1-RootWidget/template/ios/Runner/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string>jdwonczyk.gember</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -41,5 +43,11 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app requires permission to access photo library</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This app requires permission to access camera</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app requires permission to access microphone</string>
 </dict>
 </plist>
