--- a/1-RootWidget/template/pubspec.yaml
+++ b/1-RootWidget/template/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
   
   cupertino_icons: ^1.0.2
+  font_awesome_flutter: ^9.2.0
   shared_preferences: ^2.0.7
   json_annotation: ^4.1.0
   chopper: ^4.0.1
@@ -52,7 +53,9 @@ dependencies:
   firebase_storage: ^10.1.0
   image_picker: ^0.8.4+4
   webview_flutter: ^2.3.1
+  flutter_inappwebview: ^5.3.2
   # flutter_webview_plugin: ^0.4.0
+  url_launcher: ^6.0.17
 
 dev_dependencies:
   flutter_test:
